--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "finller/laravel-invoices": "^3.1",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
-        "laraveldaily/laravel-invoices": "4.0"
+        "laraveldaily/laravel-invoices": "4.0",
+        "twilio/sdk": "^7.16"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
