--- a/.env
+++ b/.env
@@ -21,8 +21,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3308
-DB_DATABASE=hms
+DB_PORT=3309
+DB_DATABASE=hospital
 DB_USERNAME=root
 DB_PASSWORD=
 
